Fixing spacing issues in user profile

--- a/assets/less/user-profile.less
+++ b/assets/less/user-profile.less
@@ -190,7 +190,12 @@ a.btn.connect {
 		top: -3px;
 	}
 	.points-wrapper {
-		margin-bottom: 25px;
+		//margin-top: 40px;
+		padding-bottom: 25px;
+		
+		> p:last-child, > ul {
+			margin-bottom: 0;
+		}
 	}
 	.complete {
 		color: @grayLight;
@@ -198,4 +203,47 @@ a.btn.connect {
 	.twitter-accounts {
 		margin-left: 27px;
 	}
+}
+
+
+.toprated {
+	font-size: @baseFontSize;
+	font-weight: bold;
+	height: auto;
+		
+		li {
+		line-height:  @baseFontSize+4;
+		clear: both;
+		
+		
+			a {
+				color: @linkColor;
+				display: block;
+				float: left;
+				width: 90%;
+				padding-left: 10px;
+				.border-box;
+				margin-bottom: 10px;
+				text-decoration: underline;
+				.ellipsis;
+				
+				&:hover {
+					text-decoration: none;
+				}
+				
+				&:after {
+					display: block;
+					clear: both;
+					content: " ";
+					height: 0;
+					overflow: hidden;
+				}
+			}
+			.points {
+				color: @black;
+				display: block;
+				float: left;
+				width: 10%;
+			}
+		}
 }
